--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         <section class="produtos">
             <h1>Produtos</h1>
             <div class="produto">
-                <img src="placa-mae-LGA1200.webp" alt="Placa-mãe">
+                <img src="IMG/placa-mae-LGA1200.webp" alt="Placa-mãe">
                 <h2>Placa-mãe ASUS PRIME Z390-A</h2>
                 <p>R$ 1.500,00</p>
                 <button><a href="https://produto.mercadolivre.com.br/MLB-5156956576-placa-me-lga1200-chipset-intel-h510-ddr4-10-e-11-geraco-_JM#is_advertising=true&position=1&search_layout=grid&type=pad&tracking_id=65e613f0-6ee8-4927-94da-7df17d1cc865&is_advertising=true&ad_domain=VQCATCORE_LST&ad_position=1&ad_click_id=YTlmN2JlZDItZjZkNy00YWI5LTg5Y2EtYWE3YjY2NWM1NTBh">Comprar</a></button>
             </div>
             <div class="produto">
-                <img src="I9-11900kf.webp" alt="Processador">
+                <img src="IMG/I9-11900kf.webp" alt="Processador">
                 <h2>Processador Intel Core i9-11900K</h2>
                 <p>R$ 3.500,00</p>
                 <button><a href="https://www.mercadolivre.com.br/processador-intel-core-i911900kf--de-8-nucleos-e-53ghz/up/MLBU3108903818#polycard_client=search-nordic&searchVariation=MLBU3108903818&wid=MLB5340281758&position=1&search_layout=grid&type=product&tracking_id=8080252d-3aaf-4e34-939c-a6ba1857fb48&sid=search">Comprar</a></button>
             </div>
             <div class="produto">
-                <img src="memoria-corsair.webp" alt="Memória RAM">
+                <img src="IMG/memoria-corsair.webp" alt="Memória RAM">
                 <h2>Memória RAM Corsair Vengeance LPX 16GB</h2>
                 <p>R$ 800,00</p>
                 <button><a href="https://www.mercadolivre.com.br/memoria-corsair-vengeance-lpx-32gb2x16gb-3600mhz-ddr4/p/MLB15738084#polycard_client=search-nordic&searchVariation=MLB15738084&wid=MLB4022459553&position=3&search_layout=grid&type=product&tracking_id=e5fa81b6-3a3d-49f3-9784-77badf320bf1&sid=search"></a>Comprar</button>
